Home page development

--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -9,3 +9,22 @@
     <h2>Terms and Conditions</h2>
   </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="asset/libs/bootstrap-5.3.2-dist/css/bootstrap.min.css"
+      rel="stylesheet" />
+    <script src="asset/libs/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+    <title>Privacy Policy</title>
+  </head>
+  <body>
+    <div class="flex-container">
+      <input class="name" placeholder="username" />
+      <input class="email" placeholder="password" />
+      <button>Submit</button>
+    </div>
+  </body>
+</html>
