--- a/blog-details.html
+++ b/blog-details.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="asset/libs/bootstrap-5.3.2-dist/css/bootstrap.min.css"
+      rel="stylesheet" />
+    <script src="asset/libs/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
     <title>Blog Details</title>
   </head>
   <body>
