--- a/index.html
+++ b/index.html
@@ -4,44 +4,433 @@
     <title>Bootstrap 5 Example</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="asset/css/style.css" />
+    <link rel="stylesheet" href="asset/css/short.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link
       href="asset/libs/bootstrap-5.3.2-dist/css/bootstrap.min.css"
       rel="stylesheet" />
     <script src="asset/libs/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <div class="container-fluid p-5 bg-primary text-white text-center">
-      <h1>My First Bootstrap Page</h1>
-      <p>Resize this responsive page to see the effect!</p>
-    </div>
+    <!-- navbar start -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand-logo" href="#">Genki</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-2">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
 
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col-sm-4">
-          <h3>Column 1</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-          <p>
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris...
-          </p>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Features
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Mega Menu
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Documentation
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#"
+                >Download This Template</a
+              >
+            </li>
+          </ul>
+
+          <button
+            class="btn btn-outline"
+            type="Search"
+            placeholder="Search"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal">
+            <i class="fa fa-search"></i>
+          </button>
         </div>
-        <div class="col-sm-4">
-          <h3>Column 2</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-          <p>
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris...
-          </p>
-        </div>
-        <div class="col-sm-4">
-          <h3>Column 3</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-          <p>
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris...
-          </p>
+      </div>
+    </nav>
+    <!-- Button trigger modal -->
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+          <div class="modal-body">Search</div>
         </div>
       </div>
     </div>
+    <!-- navbar close -->
+
+    <!-- Hero Section - start -->
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="image-container">
+            <img
+              class="w-100 shadow"
+              src="asset/images/hero image.jpeg"
+              style="height: 450px" />
+            <div class="image-title" style="margin-bottom: 50px">
+              <span class="bg-color-red white-text-color p-1">HEALTH</span>
+              <h4 class="image-description">
+                <a
+                  href="#"
+                  class="black-text-color text-decoration-none font-weight"
+                  >More effective schedules in remote work</a
+                >
+              </h4>
+              <div class="date-textcolor">
+                It bachelor cheerful of mistaken. Tore has sons put upon wife
+                use bred seen.Its dissia.
+              </div>
+              <div class="image-date date-textcolor">
+                BY Sora Blogging Tips &#x1F4C5; march 17,2017
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="col-md-6"
+          style="padding-top: 20px; padding-bottom: 20px; padding-left: 0px">
+          <div class="p-4 hero-section">
+            <div class="hero-blog-item">
+              <p class="redtextcolor xs-font-size font-weight">LIFESTYLE</p>
+              <h3 class="lg-font-size font-weight">
+                Some sports that will be affected by big-data advances
+              </h3>
+              <span class="date-textcolor xs-font-size font-weight">
+                March 17,2017
+              </span>
+            </div>
+
+            <div class="hero-blog-item">
+              <p class="redtextcolor xs-font-size font-weight">LIFESTYLE</p>
+              <h3 class="lg-font-size font-weight">
+                Some sports that will be affected by big-data advances
+              </h3>
+              <span class="date-textcolor xs-font-size font-weight">
+                March 17,2017
+              </span>
+            </div>
+
+            <div class="hero-blog-item">
+              <p class="redtextcolor xs-font-size font-weight">LIFESTYLE</p>
+              <h3 class="lg-font-size font-weight">
+                Some sports that will be affected by big-data advances
+              </h3>
+              <span class="date-textcolor xs-font-size font-weight">
+                March 17,2017
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Hero Section - close -->
+
+    <!-- slider start -->
+    <div class="container alert alert-warning" role="alert">
+      TICKER <span>HEALTH</span>
+      <div
+        id="carouselExampleSlidesOnly"
+        class="carousel slide"
+        data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">dalveer</div>
+          <div class="carousel-item">Singh</div>
+          <div class="carousel-item">bhai</div>
+        </div>
+      </div>
+      <!-- <a href="#" class="btn btn-outline-dark">Read More</a> -->
+    </div>
+    <!-- slider close -->
+
+    <!-- Content Section - START -->
+    <section class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="row">
+            <!-- Item #2 -->
+            <div class="col-12 col-lg-12 col-md-6 col-sm-12 col-xs-12">
+              <div class="card mb-3 mt-4">
+                <div class="row g-0">
+                  <div class="col-lg-4 col-md-12">
+                    <img
+                      src="asset/images/w2.jpeg"
+                      alt="Image"
+                      class="img-fluid" />
+                  </div>
+                  <div class="col-lg-8 col-md-12">
+                    <div class="card-body">
+                      <h5 class="card-title">Health</h5>
+                      <h2>
+                        Modern and colorfull style of caricatures created by AI
+                      </h2>
+                      <p class="card-text">
+                        <small class="text-muted"
+                          >Sora Blogging Tips February 25,2023</small
+                        >
+                      </p>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-12 col-md-6 col-sm-12 col-xs-12">
+              <div class="card mb-3 mt-4">
+                <div class="row g-0">
+                  <div class="col-lg-4 col-md-12">
+                    <img
+                      src="asset/images/w2.jpeg"
+                      alt="Image"
+                      class="img-fluid" />
+                  </div>
+                  <div class="col-lg-8 col-md-12">
+                    <div class="card-body">
+                      <h5 class="card-title">Card Title</h5>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted"
+                          >Last updated 3 mins ago</small
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-12 col-md-6 col-sm-12 col-xs-12">
+              <div class="card mb-3 mt-4">
+                <div class="row g-0">
+                  <div class="col-lg-4 col-md-12">
+                    <img
+                      src="asset/images/w2.jpeg"
+                      alt="Image"
+                      class="img-fluid" />
+                  </div>
+                  <div class="col-lg-8 col-md-12">
+                    <div class="card-body">
+                      <h5 class="card-title">Card Title</h5>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted"
+                          >Last updated 3 mins ago</small
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-12 col-md-6 col-sm-12 col-xs-12">
+              <div class="card mb-3 mt-4">
+                <div class="row g-0">
+                  <div class="col-lg-4 col-md-12">
+                    <img
+                      src="asset/images/w2.jpeg"
+                      alt="Image"
+                      class="img-fluid" />
+                  </div>
+                  <div class="col-lg-8 col-md-12">
+                    <div class="card-body">
+                      <h5 class="card-title">Card Title</h5>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted"
+                          >Last updated 3 mins ago</small
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Blog Item START -->
+
+          <!-- Blog Item close -->
+        </div>
+        <div class="col-lg-4">
+          <!-- Social Plugin - START -->
+          <div class="bg-color border-radius">
+            <h3 class="Social-media font-weight">Social Plugin</h3>
+            <div class="social-">
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-google"></a>
+              <a href="#" class="fa fa-linkedin"></a>
+              <a href="#" class="fa fa-youtube"></a>
+              <a href="#" class="fa fa-instagram"></a>
+              <a href="#" class="fa fa-pinterest"></a>
+              <a href="#" class="fa fa-snapchat-ghost"></a>
+              <a href="#" class="fa fa-skype"></a>
+              <a href="#" class="fa fa-android"></a>
+            </div>
+          </div>
+          <!-- Social Plugin - END -->
+
+          <!-- Subscribe Us - START -->
+          <div class="bg-color border-radius p-4 mt-5">
+            <h3 class="Social-media font-weight">Subscribe Us</h3>
+            <div class="social-">
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-google"></a>
+              <a href="#" class="fa fa-linkedin"></a>
+              <a href="#" class="fa fa-youtube"></a>
+              <a href="#" class="fa fa-instagram"></a>
+              <a href="#" class="fa fa-pinterest"></a>
+              <a href="#" class="fa fa-snapchat-ghost"></a>
+              <a href="#" class="fa fa-skype"></a>
+              <a href="#" class="fa fa-android"></a>
+            </div>
+          </div>
+          <!-- Subscribe Us - END -->
+          <!-- Most Popular - START -->
+          <div class="bg-color border-radius p-4 mt-5">
+            <h3 class="Social-media font-weight">Most Popular</h3>
+            <div class="social-">
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-google"></a>
+              <a href="#" class="fa fa-linkedin"></a>
+              <a href="#" class="fa fa-youtube"></a>
+              <a href="#" class="fa fa-instagram"></a>
+              <a href="#" class="fa fa-pinterest"></a>
+              <a href="#" class="fa fa-snapchat-ghost"></a>
+              <a href="#" class="fa fa-skype"></a>
+              <a href="#" class="fa fa-android"></a>
+            </div>
+          </div>
+          <!-- Most Popular - END -->
+          <!-- Facebook - START -->
+          <div class="bg-color border-radius p-4 mt-5">
+            <h3 class="Social-media font-weight">Facebook</h3>
+            <div class="social-"></div>
+          </div>
+          <!-- Facebook - END -->
+          <!-- Tags - START -->
+          <div class="bg-color border-radius p-4 mt-5">
+            <h3 class="Social-media font-weight">Tags</h3>
+            <div class="social-">
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-google"></a>
+              <a href="#" class="fa fa-linkedin"></a>
+              <a href="#" class="fa fa-youtube"></a>
+              <a href="#" class="fa fa-instagram"></a>
+              <a href="#" class="fa fa-pinterest"></a>
+              <a href="#" class="fa fa-snapchat-ghost"></a>
+              <a href="#" class="fa fa-skype"></a>
+              <a href="#" class="fa fa-android"></a>
+            </div>
+          </div>
+          <!-- Tags - END -->
+          <!-- Categories - START -->
+          <div class="bg-color border-radius p-4 mt-5">
+            <h3 class="Social-media font-weight">Categories</h3>
+            <div class="social-">
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-google"></a>
+              <a href="#" class="fa fa-linkedin"></a>
+              <a href="#" class="fa fa-youtube"></a>
+              <a href="#" class="fa fa-instagram"></a>
+              <a href="#" class="fa fa-pinterest"></a>
+              <a href="#" class="fa fa-snapchat-ghost"></a>
+              <a href="#" class="fa fa-skype"></a>
+              <a href="#" class="fa fa-android"></a>
+            </div>
+          </div>
+          <!-- Categories - END -->
+        </div>
+      </div>
+    </section>
+    <!-- Content Section - END -->
   </body>
 </html>
